--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
 
     <div class="container">
+
+       <!-- <div class="header">8-Bit Drum Kit</div>-->
     <div class="flex-grid">
+
+
       <div data-key="65" class="key">
         <button name="65" class="kbd">A</button>
         <span class="sound">bling</span>
@@ -55,6 +59,8 @@
         <button name="76" class="kbd">L</button>
         <span class="sound">loololo</span>
       
+      
+
     </div>
   </div>
 </div>
